# gridfm-graphkit

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci-build.yaml  deploy_docs.yaml  release.yaml
datasets/data_normalization/: index.html
datasets/powergrid/: index.html
datasets/transforms/: index.html
docs/: index.md
docs/datasets/: data_normalization.md  powergrid.md  transforms.md
docs/examples/: fine_tuning.md  inference.md  pre_training.md  visualization.md
docs/install/: installation.md
docs/models/: models.md
docs/quick_start/: quick_start.md  yaml_config.md
docs/training/: plugins.md  trainer.md
docs/usage/: usage.md
docs/utils/: loss.md
examples/config/: GBreducednetwork_OPFLearn_base.yaml  GBreducednetwork_base.yaml  README.md  case118_ieee_base.yaml  case240_pserc_base.yaml  case24_OPFLearn_base.yaml  case24_ieee_rts_base.yaml  case300_ieee_base.yaml  case300_ieee_base_pf_no_perturb.yaml  case30_ieee_base.yaml  case30_ieee_base_GNN.yaml  case39_epri_base.yaml  case57_ieee_base.yaml  case89_pegase_base.yaml  gridFMv0.1.1_pretraining.yaml  gridFMv0.2.1_pretraining.yaml  gridFMv0.2.2_pretraining.yaml
gridFM/: __main__.py  cli.py
notebooks/: PINN_loss.ipynb  analyze_data.ipynb  test_notebook.ipynb
scripts/: eval.py  launch_grid_CCC.sh  launch_grid_CCC_alban.sh  train.py  train_post_processing.py
search/: search_index.json
tests/: create_reference.py  test_training.py  test_yaml_configs.py
(+77 files in other folders)
