[build-system]
requires = ["setuptools >= 75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gridFM*"]
namespaces = false

[project]
name = "gridFM"
description = "Grid Foundation Model"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12.10"

authors = [
  {name = "Matteo Mazzonelli", email = "Matteo.Mazzonelli1@ibm.com"},
  {name = "Alban Puech", email = "Alban.Puech1@ibm.com"},
  {name = "Jonas Weiss", email= "jwe@zurich.ibm.com"},
]

maintainers = [
  {name = "Matteo Mazzonelli", email = "Matteo.Mazzonelli1@ibm.com"},
]

dependencies = [
    "mlflow>=3.1.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyyaml>=6.0.2",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

[project.optional-dependencies]
dev = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "pre-commit>=4.2.0",
]

test = [
  "pytest",
  "pytest-cov"
]

[project.scripts]
gridFM = "gridFM.__main__:main"
